fix header spacing

--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,12 @@
 :root {
-  --red: #C5004A;
+  --red: #c5004a;
   --green: #bbffdc;
   --darkgreen: #042200;
-  --darkred: #7F0036;
+  --darkred: #7f0036;
   --lightgray: #e0e0e0;
-  --gray: #C0C0C0;
+  --gray: #c0c0c0;
   --darkgray: #333;
-  --navy: #17050F;
+  --navy: #17050f;
   --blue: #0086b3;
   --white: #fff;
 }
@@ -51,9 +51,16 @@ main :first-child {
 header {
   border-bottom: 1px dashed var(--lightgray);
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  padding: 0 50px;
+  padding: 25px 50px;
+}
+@media only screen and (max-width: 600px) {
+  header {
+	padding: 20px;
+    justify-content: center;
+  }
 }
 table {
   margin: 1em 0;
@@ -74,14 +81,17 @@ blockquote {
 
 pre,
 code {
-  font-family: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", "Courier New", Courier, monospace;
+  font-family: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono",
+    "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono",
+    "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L",
+    "Courier New", Courier, monospace;
   line-height: 1.5;
   background-color: #f1f1f1;
   padding: 2px 10px;
   border-radius: 5px;
   font-size: 15px !important;
 }
-pre>code{
+pre > code {
   padding: 0;
   font-size: 13px !important;
 }
@@ -102,7 +112,7 @@ pre {
   hyphens: none;
   padding: 1.5em !important;
   border-radius: 5px;
-  margin: .5em 0;
+  margin: 0.5em 0;
   background-color: #f1f1f1;
   overflow: hidden !important;
 }
@@ -111,7 +121,7 @@ pre:hover {
 }
 @media only screen and (max-width: 600px) {
   pre {
-	overflow: auto !important;
+    overflow: auto !important;
   }
 }
 .highlight-line {
@@ -136,7 +146,7 @@ pre:hover {
 }
 .highlight-line-active {
   background-color: #444;
-  background-color: hsla(0, 0%, 27%, .8);
+  background-color: hsla(0, 0%, 27%, 0.8);
 }
 .highlight-line-add {
   background-color: #45844b;
@@ -153,7 +163,8 @@ pre:hover {
   font-family: monaco;
   font-size: 25px;
   border-bottom: none !important;
-  padding: 10px 0;
+  padding: 0 0;
+  margin: 0;
 }
 .home a {
   color: black;
@@ -164,15 +175,13 @@ pre:hover {
 
 /* Nav */
 .nav {
-  padding: 0;
   list-style: none;
-  float: left;
-  margin-left: 1em;
+  margin: 0;
 }
 .nav-item {
   font-size: 1.3em;
+  padding: 5px;
   display: inline-block;
-  margin-right: 1em;
 }
 .nav-item a[href]:not(:hover) {
   /* border-bottom: 2px solid rgba(0,0,0,0); */
@@ -216,7 +225,6 @@ pre:hover {
   font-weight: 700;
 }
 
-
 /* Tags */
 .tag {
   display: inline-block;
@@ -249,7 +257,7 @@ a[href].tag:visited {
   font-family: sans-serif;
   text-decoration: none;
   font-style: normal;
-  margin-left: .1em;
+  margin-left: 0.1em;
 }
 a[href].direct-link,
 a[href].direct-link:visited {
@@ -271,17 +279,16 @@ footer {
 a {
   text-decoration: none;
   color: var(--blue);
-  border-bottom: 2px solid rgba(0,0,0,0);
+  border-bottom: 2px solid rgba(0, 0, 0, 0);
 }
 
 a:hover {
   border-bottom: 2px solid var(--blue);
 }
 
-
 @media only screen and (max-width: 600px) {
   .postlist-item {
-	display: flex;
+    display: flex;
     border: 1px solid #e6e6e6;
     padding: 0 0.5em;
     background: #f2f2f2;
